--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <textarea id="feedback" placeholder='Type your feedback, quick add suggestions and more here (emails are checked frequently)'></textarea>
     <button id="sendFeedbackButton" onclick="addToQuickFind()">send feedback</button>
     <button id="clearLocalStorageButton" class="segoeUIfont">clear cookies</button>
-    <button id="permaAcknowledgeButton" onclick="permaAcknowledge()"> permanently acknowledge adblocker warning </button>
+    <button id="permaAcknowledgeButton"> permanently acknowledge adblocker warning </button>
   </body>
   <footer id="pageFooter">
   <a href="https://github.com/absurd-oliver/TLMP/commits/main/" target="_blank" style="text-decoration: none; color: inherit;">
