--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         });
       })();
     </script>
-    <script src="feedback.js" defer></script>
+    <script src="./js/feedback.js" defer></script>
   </head>
   <body class="unclickable">
     <button id="redirectButton" class="clickable">go back to landing page</button>
