--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
     <br>
   </div>
     <input type="text" id="showInput" placeholder="Show or Movie name" class="segoeUIfont"/>
-    <label><input type="checkbox" id="modeToggle"/>Movie Mode</label><span style="font-size: 0.8em;">(if this does work, try clearing cookies at the bottom of the page)</span>
+    <label><input type="checkbox" id="modeToggle"/>Movie Mode</label><span style="font-size: 0.8em;">(if this doesn't work, try clearing cookies at the bottom of the page)</span>
     <div id="tvControls">
       <input type="number" id="seasonInput" min="1" placeholder="Season" class="segoeUIfont"/>
       <input type="number" id="episodeInput"  min="1" placeholder="Episode" class="segoeUIfont"/>
-    </div>
-        <div>
-      <button id='prevButton'>previous episode</button>
-      <button id='nextButton'>next episode</button>
+      <div>
+        <button id='prevButton'>previous episode</button>
+        <button id='nextButton'>next episode</button>
+      </div>
     </div>
     <div>
       <label><input type="checkbox" id="themeToggle" />Light Theme</label>
