repositioned previous and next buttons & edited dom.js + init.js accordingly

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     <div id="tvControls">
       <input type="number" id="seasonInput" min="1" placeholder="Season" class="segoeUIfont"/>
       <input type="number" id="episodeInput"  min="1" placeholder="Episode" class="segoeUIfont"/>
-      <div>
-        <button id='prevButton'>previous episode</button>
-        <button id='nextButton'>next episode</button>
-      </div>
     </div>
+    <div id="prevNextButtons">
+      <button id='prevButton'>previous episode</button>
+      <button id='nextButton'>next episode</button>
+      </div>
     <div>
       <label><input type="checkbox" id="themeToggle" />Light Theme</label>
       <label><input type="checkbox" id="themeTogglePink" />Pink Theme</label>
