chnaged movie toggle checkbox warning position

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <br>
   </div>
     <input type="text" id="showInput" placeholder="Show or Movie name" class="segoeUIfont"/>
-    <label><input type="checkbox" id="modeToggle"/>Movie Mode</label><span style="font-size: 0.8em;">(if this doesn't work, try clearing cookies at the bottom of the page)</span>
+    <span style="font-size: 0.7em;">(if this doesn't work, try clearing cookies at the bottom of the page)</span>
+    <label><input type="checkbox" id="modeToggle"/>Movie Mode</label>
     <div id="tvControls">
       <input type="number" id="seasonInput" min="1" placeholder="Season" class="segoeUIfont"/>
       <input type="number" id="episodeInput"  min="1" placeholder="Episode" class="segoeUIfont"/>
